# somisana-ww3

./: .gitignore  README.md  cli.py  environment.yml  pyproject.toml
configs/sa_west_02/GRID/: make_grid.py
configs/sa_west_02/RUN_01/: myenv_inter.sh  run_inter.bash  run_inter_chpc.pbs  ww3_grid.nml  ww3_prnc.nml  ww3_shel.nml
configs/sa_west_02/RUN_01/postprocess/: get_ts.py  plot_map.py  plot_ww3_CP01.py
configs/sa_west_02/SPEC_CMEMS/: make_bry.bash  ts_check.py
ww3_tools/: plotting.py  postprocess.py  preprocess.py
